lab3/manifest/lab3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
          - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: lab3-service
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      protocol: TCP
      name: http
  type: LoadBalancer
