lab3/manifest/lab3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: lab3ishutina.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-service
            port:
              number: 3000
  tls:
  - hosts:
    - lab3ishutina.com
    secretName: tls-secret
